# reverb

./: .gitattributes  .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py
examples/: rum_rhum.ipynb  rum_rhum_whales.ipynb
segmentation/: README.md
segmentation/analysis/: ResonanceCurrents.ipynb  UPFLOW_all_whales.ipynb  station_energies.py
segmentation/auto_labelling/: label_studio_model.py  label_studio_model_whale.py
segmentation/data_generation/: import_images.ipynb
segmentation/model_training/: Multiclass.ipynb  ResonanceSegmentation.ipynb  SemiSupervisedSegmentation.ipynb  SupervisedSegmentation.ipynb  SyntheticPretrainSegmentation.ipynb  WhaleSegmentation.ipynb
src/reverb/analysis/: inference.py  plotting.py
src/reverb/training/: custom_nets.py  dataloaders.py  metrics.py  pl_models.py  scaling.py  semi_supervised_pl.py  synthetic_resonances.py  utils.py
src/reverb/utils/: spectrogram_plotting.py  spectrograms.py
